objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Source of opportunity</description>
        <inlineHelpText>Select source of opportunity</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Equinox</fullName>
                </value>
                <value>
                    <fullName>Event / Conference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referred by Banking</fullName>
                </value>
                <value>
                    <fullName>Referred by Client</fullName>
                </value>
                <value>
                    <fullName>Referred by CPF</fullName>
                </value>
                <value>
                    <fullName>Referred by GFTB</fullName>
                </value>
                <value>
                    <fullName>Referred by Markets</fullName>
                </value>
                <value>
                    <fullName>Referred by Other Product Area</fullName>
                </value>
                <value>
                    <fullName>Sale to Exisiting Client</fullName>
                </value>
                <value>
                    <fullName>Referred by RBB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_status_value__c</fullName>
        <formula>IF(IsWon == TRUE,&quot;Won Opportunities&quot;,IF(Probability  &gt;= 70 || IsClosed == TRUE, &quot;Impending Closure&quot;, &quot;WIP&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity status value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Banker_Name__c</fullName>
        <description>This is the Original Client&apos;s Banker Name</description>
        <formula>IF(
	AND(NOT(ISBLANK(Account.Id)), Account.Name &lt;&gt; &apos;Private Side Client&apos;), 
	Account.Owner.FirstName &amp; &quot; &quot; &amp;  Account.Owner.LastName, 
	IF(
		NOT(ISBLANK(Account_Name__c)), 
		Account_Name__r.Owner.FirstName &amp; &quot; &quot; &amp;  Account_Name__r.Owner.LastName, 
		&quot;&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Banker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Banker_Team_Name__c</fullName>
        <description>This is the Original Client&apos;s Banker&apos;s Team</description>
        <formula>IF(
	AND(NOT(ISBLANK(Account.Id)), Account.Name &lt;&gt; &apos;Private Side Client&apos;), 
	TEXT(Account.Owner.Team__c), 
	IF(
		NOT(ISBLANK(Account_Name__c)), 
		TEXT(Account_Name__r.Owner.Team__c), 
		&quot;&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Banker Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Related_Group_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Related Group Client is a copy of Related Group Client for private side opportunities</description>
        <label>Original Related Group Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Original Related Group Client)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflow trigger</description>
        <label>Overdue reminder sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerOccupied__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Owner Occupied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <formula>Owner.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Hub__c</fullName>
        <formula>TEXT( Owner.Hub__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFA-348 - to enable sending mails from Opportunity</description>
        <label>Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>To surface Owner Region on Opportunity</description>
        <formula>TEXT(Owner.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Owner role for reporting purposes</description>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Role__c</fullName>
        <description>To surface Owner Team Role on Opportunity</description>
        <formula>TEXT( Owner.Team_Role__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <description>To surface Owner Team on Opp</description>
        <formula>TEXT( Owner.Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Is_Parent_Opportunity__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Wealth - Upfront fee % of Deal Value</description>
        <label>Upfront Fee (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority_Reason__c</fullName>
        <description>SFA-271</description>
        <label>Priority Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local Priority</fullName>
                </value>
                <value>
                    <fullName>Regional Priority - Client &amp; Product</fullName>
                </value>
                <value>
                    <fullName>Regional Priority - Client</fullName>
                </value>
                <value>
                    <fullName>Regional Priority - Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFA- 271  To  Flag Opportunities in order to exclude from Pipeline reports and to notify bankers</description>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrivateSideClassification__c</fullName>
        <defaultValue>IF(AND($User.ProfileId = &quot;00e24000000q40t&quot;, $RecordType.Id = &quot;01224000000Kx2m&quot;) , &quot;Team head is not conflicted&quot;, NULL)</defaultValue>
        <description>Determines the reason for this being a Private Side Deal. Depending on the value the Private Side Client logic runs or does not run.</description>
        <inlineHelpText>Visible:Visible to Coverage Banker, management hierarchy, all deal team members and their management hierarchies. Not Visible:Won&apos;t be visible to Coverage Banker &amp; management hierarchy, will be visible to deal team members &amp; their management hierarchies.</inlineHelpText>
        <label>Private Side Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team head is conflicted</fullName>
                    <label>Not visible to Coverage Banker</label>
                </value>
                <value>
                    <fullName>Team head is not conflicted</fullName>
                    <label>Visible to Coverage Banker</label>
                </value>
                <value>
                    <fullName>Coverage team head is conflicted</fullName>
                    <isActive>false</isActive>
                    <label>Coverage team head is conflicted</label>
                </value>
                <value>
                    <fullName>Coverage team head is not conflicted</fullName>
                    <isActive>false</isActive>
                    <label>Coverage team head is not conflicted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Side_Answer__c</fullName>
        <description>This field was created so that a indication of weather the Opportunity is private or not is shown within an email template. The Private Side field was not appearing in the template even when making use of a conditional if statements</description>
        <formula>IF( Private_Side__c = True, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Private Side Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <description>Gives the amount of OpportunityLineItems on an opportunity</description>
        <label>ProductCount</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductLevel2List__c</fullName>
        <description>A concatenation of all Product Level 2 names related to an opportunity</description>
        <inlineHelpText>A concatenation of all Product Level 2 names related to an opportunity</inlineHelpText>
        <label>ProductLevel2List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductLevel3Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds the number of Level 3 Products on an Opportunity</description>
        <label>Product Level 3 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductLevel3List__c</fullName>
        <description>A concatenation of all Product Level 3 names related to an opportunity</description>
        <inlineHelpText>A concatenation of all Product Level 3 names related to an opportunity</inlineHelpText>
        <label>ProductLevel3List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductLevel3__c</fullName>
        <description>The last Product Level 3 added on the Opportunity</description>
        <inlineHelpText>The last Product Level 3 added on the Opportunity</inlineHelpText>
        <label>Product Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information Product (Host - Account Holder Verification)</fullName>
                </value>
                <value>
                    <fullName>Domestic Collections (Host - Direct Debits)</fullName>
                </value>
                <value>
                    <fullName>Domestic Collections (Host - NAEDO)</fullName>
                </value>
                <value>
                    <fullName>Domestic Payments (Host - Payments)</fullName>
                </value>
                <value>
                    <fullName>Information Product (Host - Statement Delivery)</fullName>
                </value>
                <value>
                    <fullName>Domestic Collections (Online - Direct Debits)</fullName>
                </value>
                <value>
                    <fullName>Domestic Collections (Online - NAEDO)</fullName>
                </value>
                <value>
                    <fullName>Domestic Payments (Online - Payments)</fullName>
                </value>
                <value>
                    <fullName>Information Product (Online - Statement Delivery)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductList__c</fullName>
        <label>ProductList</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductPartnerApprovalStatus__c</fullName>
        <label>Product Partner Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The selected Product Partner on the Product for this Opportunity</description>
        <label>Product Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProductPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code_Won_Opportunity__c</fullName>
        <label>Product Code (TB)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Type__c</fullName>
        <description>Wealth - Type of Product sold in the Opportunity</description>
        <label>Products Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>AWI</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>CIS (AAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (ABAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (AMM)</fullName>
                </value>
                <value>
                    <fullName>CIS (CIB)</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>DIM CIS (AMM)</fullName>
                </value>
                <value>
                    <fullName>DIM Wrap (AMM)</fullName>
                </value>
                <value>
                    <fullName>ETF&apos;s (ABCAP)</fullName>
                </value>
                <value>
                    <fullName>FX</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Offshore Banking</fullName>
                </value>
                <value>
                    <fullName>Offshore Investment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Secured Option (AAM)</fullName>
                </value>
                <value>
                    <fullName>Segregated Mandate (AAM)</fullName>
                </value>
                <value>
                    <fullName>Segregated Mandate (ABAM)</fullName>
                </value>
                <value>
                    <fullName>Share Portfolios (ABAM PC)</fullName>
                </value>
                <value>
                    <fullName>SSG</fullName>
                </value>
                <value>
                    <fullName>Stock Broking</fullName>
                </value>
                <value>
                    <fullName>Structured Products (AAM)</fullName>
                </value>
                <value>
                    <fullName>Structured Products (ABCAP)</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Africa Franchise</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Fixed Income</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Domestic Equity</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Multi-Asset Balanced</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Multi-Asset Absolute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <displayFormat>PN {000}</displayFormat>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PropertySector__c</fullName>
        <label>Property Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertySubType__c</fullName>
        <label>Property Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abattoir</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing</fullName>
                </value>
                <value>
                    <fullName>Block of Flats</fullName>
                </value>
                <value>
                    <fullName>Church</fullName>
                </value>
                <value>
                    <fullName>Church and Counselling Centre</fullName>
                </value>
                <value>
                    <fullName>Cold Storage</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>Conference Venue</fullName>
                </value>
                <value>
                    <fullName>Creche</fullName>
                </value>
                <value>
                    <fullName>Development - Industrial</fullName>
                </value>
                <value>
                    <fullName>Development - Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Development - Offices</fullName>
                </value>
                <value>
                    <fullName>Development - Residential</fullName>
                </value>
                <value>
                    <fullName>Development - Retail</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Factory &amp; Offices</fullName>
                </value>
                <value>
                    <fullName>Filling Station</fullName>
                </value>
                <value>
                    <fullName>Guest House</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Mines</fullName>
                </value>
                <value>
                    <fullName>Motor Dealership</fullName>
                </value>
                <value>
                    <fullName>Nursery School</fullName>
                </value>
                <value>
                    <fullName>offices</fullName>
                </value>
                <value>
                    <fullName>Offices and Residential and Retail</fullName>
                </value>
                <value>
                    <fullName>Panel Beaters</fullName>
                </value>
                <value>
                    <fullName>Place of Worship</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Private Hospital</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <label>Push Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check to indicate if this is an RFP or Tender.</inlineHelpText>
        <label>RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <description>Wealth - Reason for winning or losing the Opportunity</description>
        <label>Reason Won / Lost</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Client need change / not taken up</fullName>
                </value>
                <value>
                    <fullName>Credit Policy Decision</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product / Solution</fullName>
                </value>
                <value>
                    <fullName>Regulatory / Compliance</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_close_date_change__c</fullName>
        <description>Wealth - Validation for the change of the close date</description>
        <label>Reason for close date change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_probability_change__c</fullName>
        <description>Wealth - Reason why the probability % was manually overwritten</description>
        <label>Reason for Probability Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client_CIF__c</fullName>
        <formula>Related_Group_Client__r.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Group Client CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client_Reg__c</fullName>
        <formula>Related_Group_Client__r.Registration_Number__c</formula>
        <label>Related Group Client Reg #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client_SDS__c</fullName>
        <formula>Related_Group_Client__r.SDS__c</formula>
        <label>Related Group Client SDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client_Segment__c</fullName>
        <formula>TEXT(Related_Group_Client__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Group Client Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select only Clients belonging to the Relationship Group</inlineHelpText>
        <label>Related Group Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select only Clients belonging to the Relationship Group</errorMessage>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Client_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipOwnerRoleName__c</fullName>
        <description>Holds the Relationship Owners Role Name for use with Sharing Rules CIBDIGSALP-1384</description>
        <label>Relationship Owner Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relationship Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Group_Segment__c</fullName>
        <formula>TEXT(Account.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Group Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Proposal_Support__c</fullName>
        <label>Require Proposal Support?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_This_Year__c</fullName>
        <formula>IF(RecordTypeId = &apos;01224000000TOY0&apos;, ( Days_Remaining__c )  *  ( Annualised_Income_Wealth__c / 365) +  Fee_Amount__c, 

IF(RecordTypeId = &apos;01224000000TOY1&apos;,( Days_Remaining__c ) * ( Annualised_Income_Wealth__c / 365) + Fee_Amount_2__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Review_Reason__c</fullName>
        <description>SFA-271 to be used in conjunction with Checkbox: Review</description>
        <inlineHelpText>Provide a reason for Opp being under Review</inlineHelpText>
        <label>Review Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFA- 271 To Flag Opportunities in order to exclude from Pipeline reports and to notify bankers</description>
        <inlineHelpText>Check to remove from Pipeline until resolved</inlineHelpText>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SA_Debt_Segment__c</fullName>
        <label>S.A. Debt Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leveraged Finance</fullName>
                </value>
                <value>
                    <fullName>Midcorp</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_F__c</fullName>
        <description>Display SIC Code and Description, if available, from associated Relationship.</description>
        <formula>IF (ISNULL(Account.Sic), &apos;&apos;, IF (ISNULL(Account.SicDesc), Account.Sic, Account.Sic &amp; &apos; - &apos; &amp;  Account.SicDesc))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Determines the segment to which the opportunity belongs in order to apply sharing rules</description>
        <inlineHelpText>Determines the segment to which the opportunity belongs in order to apply sharing rules</inlineHelpText>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Significant_Pitch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option if this opportunity relates to a significant pitch</inlineHelpText>
        <label>Significant Pitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFA-327</description>
        <label>Acc Banker Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubStageGlossary__c</fullName>
        <description>The hyperlink pointing to the Sub Stage Glossary</description>
        <formula>HYPERLINK(&quot;/resource/1495205115000/SubStagesGlossary&quot;,&quot;View File&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Stage Glossary</label>
        <type>Text</type>
    </fields>
</CustomObject>